--- a/src/app/components/pages/home/sections/inicio/inicio.html
+++ b/src/app/components/pages/home/sections/inicio/inicio.html
@@ -8,7 +8,8 @@
             </div>
 
             <div class="video-wrapper" #iframeWrapper>
-                <div id="player-placeholder"></div>
+                <video #videoEl id="player-placeholder" src="assets/videos/Meu%20Filme.mp4" preload="metadata" muted
+                    playsinline loop></video>
             </div>
         </div>
 
