--- a/src/app/components/pages/home/sections/inicio/inicio.scss
+++ b/src/app/components/pages/home/sections/inicio/inicio.scss
@@ -125,6 +125,13 @@
     }
 }
 
+.video-wrapper video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
 #texto-beneficios-revendedor {
     width: 100%;
     display: flex;
@@ -244,10 +251,12 @@
 }
 
 @keyframes heroCloud {
+
     0%,
     100% {
         transform: translate3d(0, 0, 0) scale(1);
     }
+
     50% {
         transform: translate3d(12px, -16px, 0) scale(1.05);
     }
@@ -265,6 +274,7 @@
         opacity: 0;
         transform: translateY(12px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
