feat: criar sessão de catálogo com grid de colchões

--- a/src/app/components/pages/home/home.html
+++ b/src/app/components/pages/home/home.html
@@ -3,6 +3,7 @@
 <app-inicio />
 <app-informacoes-inicio />
 <app-beneficios />
+<app-lista-produtos />
 <app-depoimentos />
 <app-qual-escolher />
 <app-sobre-nos />
