Add Goiânia map embed before footer

--- a/src/app/components/pages/home/home.html
+++ b/src/app/components/pages/home/home.html
@@ -7,4 +7,16 @@
 <app-depoimentos />
 <app-qual-escolher />
 <app-sobre-nos />
+<section class="mapa">
+  <iframe
+    title="Mapa de Goiânia"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122831.9691873422!2d-49.36759045!3d-16.686882799999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef70ffc4a799d%3A0xee45ed2f8c0d03e9!2sGoi%C3%A2nia%20-%20GO!5e0!3m2!1spt-BR!2sbr!4v1712070000000!5m2!1spt-BR!2sbr"
+    width="100%"
+    height="450"
+    style="border: 0"
+    allowfullscreen
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"
+  ></iframe>
+</section>
 <app-footer [linksFooter]="linksFooter" />
